Opened 3 years ago
Closed 3 years ago
#17686 closed bug (fixed)
PANIC: entries count was not decremented for a long time!
Reported by: | jmairboeck | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #17455 | |
Platform: | All |
Description
It seems that a form of #17455 can still occur very rarely. This is the same system, running in VirtualBox, using 2 virtual CPU cores.
KERN: PANIC: entries count was not decremented for a long time! KERN: Welcome to Kernel Debugging Land... KERN: Thread 412 "Startup control" running on CPU 0 KERN: stack trace for thread 412 "Startup control" KERN: kernel stack: 0xffffffff80745000 to 0xffffffff8074a000 KERN: user stack: 0x00007f21466ec000 to 0x00007f214672c000 KERN: frame caller <image>:function + offset KERN: 0 ffffffff80749b38 (+ 24) ffffffff8014435c <kernel_x86_64> arch_debug_call_with_fault_handler + 0x16 KERN: 1 ffffffff80749b50 (+ 80) ffffffff800ae268 <kernel_x86_64> debug_call_with_fault_handler + 0x78 KERN: 2 ffffffff80749ba0 (+ 96) ffffffff800af883 <kernel_x86_64> kernel_debugger_loop(char const*, char const*, __va_list_tag*, int) + 0xf3 KERN: 3 ffffffff80749c00 (+ 80) ffffffff800afc1e <kernel_x86_64> kernel_debugger_internal(char const*, char const*, __va_list_tag*, int) + 0x6e KERN: 4 ffffffff80749c50 (+ 240) ffffffff800aff77 <kernel_x86_64> panic + 0xb7 KERN: 5 ffffffff80749d40 (+ 96) ffffffff80056f95 <kernel_x86_64> ConditionVariable::_NotifyLocked(bool, int) + 0x155 KERN: 6 ffffffff80749da0 (+ 64) ffffffff800573d4 <kernel_x86_64> ConditionVariable::_Notify(bool, int) + 0x44 KERN: 7 ffffffff80749de0 (+ 208) ffffffff8006e78d <kernel_x86_64> writev_port_etc + 0x57d KERN: 8 ffffffff80749eb0 (+ 112) ffffffff8006f086 <kernel_x86_64> _user_write_port_etc + 0x96 KERN: 9 ffffffff80749f20 (+ 16) ffffffff80145e4f <kernel_x86_64> x86_64_syscall_entry + 0xfb KERN: user iframe at 0xffffffff80749f30 (end = 0xffffffff80749ff8) KERN: rax 0xdf rbx 0xe9 rcx 0x1719bc687cc KERN: rdx 0x7f214672b820 rsi 0x306 rdi 0xe9 KERN: rbp 0x7f214672b810 r8 0x8 r9 0xe4e1c0 KERN: r10 0xd0 r11 0x202 r12 0x110dabebe0a0 KERN: r13 0x306 r14 0x7f214672b820 r15 0xd0 KERN: rip 0x1719bc687cc rsp 0x7f214672b7d8 rflags 0x202 KERN: vector: 0x63, error code: 0x0 KERN: 10 ffffffff80749f30 (+139783032412384) 000001719bc687cc <libroot.so> _kern_write_port_etc + 0x0c KERN: 11 00007f214672b810 (+ 256) 0000007a7b956b33 <libmedia.so> BBufferProducer::SendBuffer(BBuffer*, media_source const&, media_destination const&) + 0x153 KERN: 12 00007f214672b910 (+ 192) 0000007a7b987b8d <libmedia.so> BPrivate::SoundPlayNode::SendNewBuffer(media_timed_event const*, long, bool) + 0x11d KERN: 13 00007f214672b9d0 (+ 32) 0000007a7b95d497 <libmedia.so> BMediaEventLooper::DispatchEvent(media_timed_event const*, long, bool) + 0x17 KERN: 14 00007f214672b9f0 (+ 224) 0000007a7b95d739 <libmedia.so> BMediaEventLooper::ControlLoop() + 0x209 KERN: 15 00007f214672bad0 (+ 32) 0000007a7b95d2a1 <libmedia.so> BMediaEventLooper::_ControlThreadStart(void*) + 0x21 KERN: 16 00007f214672baf0 (+ 32) 000001719bc67599 <libroot.so> _thread_do_exit_work (nearest) + 0x89 KERN: 17 00007f214672bb10 (+ 0) 00007fcfae30f260 <commpage> commpage_thread_exit + 0x00 KERN: kdebug> coKERN: variable pointer was not unset for a long time!
This just occurred once so far after a few hours of uptime, while doing some work (so it was not just idling). The KDL is continuable.
Change History (1)
comment:1 by , 3 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Downgraded in hrev56074.