kernel/condition_variable: Downgrade another panic into a debug print.

Fixes #17686.